--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Proof Section | Fronted Mentor Challenge #1 jdaviddiazo</title>
+    <link rel="stylesheet" href="css/desktop.css" />
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
-    
+    <main>
+        <section>
+            <div>
+                <h1>
+                    10,000+ of our users love our products.
+                </h1>
+                <p>
+                    We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services. 
+                </p>
+            </div>
+            <div class="star-box">
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <p>
+                    Rated 5 Stars in Reviews
+                </p>
+            </div>
+        </section>
+        <section>
+
+        </section>
+    </main>
 </body>
 </html>
