--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Social Proof Section | Fronted Mentor Challenge #1 jdaviddiazo</title>
     <link rel="stylesheet" href="css/desktop.css" />
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
-        <section>
-            <div>
-                <h1>
+        <section class="first-section">
+            <div class="text-container">
+                <h1 class="principal-title">
                     10,000+ of our users love our products.
                 </h1>
-                <p>
+                <p class="principal-description">
                     We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services. 
                 </p>
             </div>
@@ -29,7 +30,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section class="second-section">
 
         </section>
     </main>
