--- a/index.html
+++ b/index.html
@@ -4,34 +4,104 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Proof Section | Fronted Mentor Challenge #1 jdaviddiazo</title>
-    <link rel="stylesheet" href="css/desktop.css" />
+    <link rel="stylesheet" media="(max-width: 768px)" href="css/mobile.css" />
+    <link rel="stylesheet" media="(min-width: 768px)" href="css/desktop.css" />
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <section class="first-section">
             <div class="text-container">
                 <h1 class="principal-title">
-                    10,000+ of our users love our products.
+                    10,000+ of our <br /> users love our <br /> products.
                 </h1>
                 <p class="principal-description">
                     We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services. 
                 </p>
             </div>
-            <div class="star-box">
-                <img src="images/icon-star.svg" alt="" />
-                <img src="images/icon-star.svg" alt="" />
-                <img src="images/icon-star.svg" alt="" />
-                <img src="images/icon-star.svg" alt="" />
-                <img src="images/icon-star.svg" alt="" />
-                <p>
-                    Rated 5 Stars in Reviews
-                </p>
+            <div class="rating-boxes">
+                <div class="star-box 1">
+                    <div class="stars">
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                    </div>
+                    <p class="title-rated">
+                        Rated 5 Stars in Reviews
+                    </p>
+                </div>
+                <div class="star-box 2">
+                    <div class="stars">
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                    </div>
+                    <p class="title-rated">
+                        Rated 5 Stars in Report Guru
+                    </p>
+                </div>
+                <div class="star-box 3">
+                    <div class="stars">
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                        <img src="images/icon-star.svg" alt="" />
+                    </div>
+                    <p class="title-rated">
+                        Rated 5 Stars in BestTech
+                    </p>
+                </div>
             </div>
         </section>
         <section class="second-section">
-
+            <div class="box-testimonial">
+                <div class="person">
+                    <div>
+                        <img src="images/image-colton.jpg" class="profile-pic" alt="Johnny Smith Profile Pic" />
+                    </div>
+                    <div>
+                        <h2 class="person-name">Johnny Smith</h2>
+                        <h3 class="verified-name">Verified Buyer</h3>
+                    </div>
+                </div>
+                <p class="testimonial">
+                    "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
+                </p>
+            </div>
+            <div class="box-testimonial">
+                <div class="person">
+                    <div>
+                        <img src="images/image-irene.jpg" class="profile-pic" alt="Irene Roberts Profile Pic" />
+                    </div>
+                    <div>
+                        <h2 class="person-name">Irene Roberts</h2>
+                        <h3 class="verified-name">Verified Buyer</h3>
+                    </div>
+                </div>
+                <p class="testimonial">
+                    "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
+                </p>
+            </div>
+            <div class="box-testimonial">
+                <div class="person">
+                    <div>
+                        <img src="images/image-anne.jpg" class="profile-pic" alt="Anne Wallace Profile Pic" />
+                    </div>
+                    <div>
+                        <h2 class="person-name">Anne Wallace</h2>
+                        <h3 class="verified-name">Verified Buyer</h3>
+                    </div>
+                </div>
+                <p class="testimonial">
+                    "Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!
+                </p>
+            </div>
         </section>
     </main>
 </body>
