--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Proof Section | Fronted Mentor Challenge #1 jdaviddiazo</title>
-    <link rel="stylesheet" media="(max-width: 768px)" href="css/mobile.css" />
-    <link rel="stylesheet" media="(min-width: 768px)" href="css/desktop.css" />
+    <link rel="stylesheet" media="(max-width: 1150px)" href="css/mobile.css" />
+    <link rel="stylesheet" media="(min-width: 1150px)" href="css/desktop.css" />
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -14,14 +14,14 @@
         <section class="first-section">
             <div class="text-container">
                 <h1 class="principal-title">
-                    10,000+ of our <br /> users love our <br /> products.
+                    10,000+ of our users love our products.
                 </h1>
                 <p class="principal-description">
                     We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services. 
                 </p>
             </div>
             <div class="rating-boxes">
-                <div class="star-box 1">
+                <div class="star-box first">
                     <div class="stars">
                         <img src="images/icon-star.svg" alt="" />
                         <img src="images/icon-star.svg" alt="" />
@@ -33,7 +33,7 @@
                         Rated 5 Stars in Reviews
                     </p>
                 </div>
-                <div class="star-box 2">
+                <div class="star-box second">
                     <div class="stars">
                         <img src="images/icon-star.svg" alt="" />
                         <img src="images/icon-star.svg" alt="" />
@@ -45,7 +45,7 @@
                         Rated 5 Stars in Report Guru
                     </p>
                 </div>
-                <div class="star-box 3">
+                <div class="star-box three">
                     <div class="stars">
                         <img src="images/icon-star.svg" alt="" />
                         <img src="images/icon-star.svg" alt="" />
