--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </section>
         <section class="second-section">
-            <div class="box-testimonial">
+            <div class="box-testimonial jhonny">
                 <div class="person">
                     <div>
                         <img src="images/image-colton.jpg" class="profile-pic" alt="Johnny Smith Profile Pic" />
@@ -74,7 +74,7 @@
                     "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
                 </p>
             </div>
-            <div class="box-testimonial">
+            <div class="box-testimonial irene">
                 <div class="person">
                     <div>
                         <img src="images/image-irene.jpg" class="profile-pic" alt="Irene Roberts Profile Pic" />
@@ -88,8 +88,8 @@
                     "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
                 </p>
             </div>
-            <div class="box-testimonial">
-                <div class="person">
+            <div class="box-testimonial anne">
+                <div class="person anne">
                     <div>
                         <img src="images/image-anne.jpg" class="profile-pic" alt="Anne Wallace Profile Pic" />
                     </div>
