Final result and readme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" media="(min-width: 1150px)" href="css/desktop.css" />
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        .attribution {
+          font-size: 11px;
+          text-align: center;
+        }
+        .attribution a {
+          color: hsl(228, 45%, 44%);
+        }
+      </style>
 </head>
 <body>
     <main>
@@ -103,6 +112,12 @@
                 </p>
             </div>
         </section>
+        <div class="attribution">
+            Challenge by
+            <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+              >Frontend Mentor</a
+            >. Coded by <a href="https://github.com/jdaviddiazo">J. David Díaz (@jdaviddiazo)</a>.
+          </div>
     </main>
 </body>
 </html>
